# jmg-downloader-v2

./: Cargo.toml  README.md  foo.txt
src/: constants.rs  input.rs  lib.rs  main.rs  util.rs
