[package]
name = "jmg-downloader-v2"
version = "0.1.0"
authors = ["myyrakle <sssang97@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
url = "2.2.2"
point = "0.3.1"
rand = "0.8.3"
